Feat(#Bill-refactor) Bill 1차 리팩토링 (#63)
* 미사용 클래스 삭제

* bill 조회 관련 리팩토링

* application 설정파일 필요없는 것 제거

* Bill 관련 리팩토링 완료

* Party 관련 api 임시 주석 처리