@@ -2,7 +2,7 @@ package com.everyones.lawmaking.service;
 
 import com.everyones.lawmaking.common.dto.*;
 import com.everyones.lawmaking.common.dto.response.BillDetailDto;
-import com.everyones.lawmaking.common.dto.response.MainFeedBillResponse;
+import com.everyones.lawmaking.common.dto.BillDto;
 import com.everyones.lawmaking.common.dto.response.PaginationResponse;
 import com.everyones.lawmaking.domain.entity.Bill;
 import com.everyones.lawmaking.global.CustomException;
@@ -15,13 +15,13 @@ import org.springframework.data.domain.Pageable;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
-import java.util.Collections;
+import java.util.ArrayList;
 import java.util.List;
 import java.util.Map;
 import java.util.concurrent.ConcurrentHashMap;
 import java.util.stream.Collectors;
 
-//import static com.everyones.lawmaking.domain.entity.QCongressman.congressman;
+
 
 @RequiredArgsConstructor
 @Service
@@ -31,140 +31,68 @@ public class BillService {
     private final BillRepository billRepository;
     private final BillProposerRepository billProposerRepository;
 
-    // TODO: Query 1개로 묶는 것을 목표 + 로직이 최신 법안 3개 가져오는 형태 추후 수정 + summary에 개행문자 제거 소요 있음
-    public MainFeedBillResponse getNext3Bills(int page, Pageable pageable) {
+    public List<BillDto> getBillsByDefault(Pageable pageable) {
         // 메인피드에서 Bill 정보 페이지네이션으로 가져오기
-        var bills = billRepository.findNextThreeBills(pageable);
-        bills = setPartyInBillDto(bills);
-
-        var paginationResponse = PaginationResponse.builder().pageNumber(page).isLastPage(false).build();
-        return MainFeedBillResponse.builder()
-                .Bills(bills)
-                .paginationResponse(paginationResponse)
-                .build();
-    }
-
-    public MainFeedBillResponse getNext3BillsWithStage(int page, Pageable pageable, String stage) {
-        var bills = billRepository.findNextThreeBillsWithStage(pageable, stage);
-        bills = setPartyInBillDto(bills);
-        var paginationResponse = PaginationResponse.builder().pageNumber(page).isLastPage(false).build();
-        return MainFeedBillResponse.builder()
-                .Bills(bills)
-                .paginationResponse(paginationResponse)
-                .build();
-    }
-
-    public BillDetailDto getBillWtihDeatail(String billId) {
-        var bill = billRepository.findBillDetailByBillId(billId);
-        var publicIdsAndProposersAndParty = billProposerRepository.findPartyByBill(billId);
-
-        List<String> publicProposerIds = publicIdsAndProposersAndParty.stream()
-                .map(congressman -> congressman[0])
-                .collect(Collectors.toList());
-
-        List<String> publicProposers = publicIdsAndProposersAndParty.stream()
-                .map(congressman -> congressman[1].length() > 3 ? congressman[1].substring(0, 3) : congressman[1])
-                .collect(Collectors.toList());
-
-        var proposerPartyCountList = bill.getProposerPartyCountList();
-        var proposerPartyIdList = bill.getProposerPartyIdList();
-        var publicIdsAndProposersAndPartyCount = publicIdsAndProposersAndParty.size();
-        for (int i = 0; i < publicIdsAndProposersAndPartyCount; i++) {
-            String partyName = publicIdsAndProposersAndParty.get(i)[2];
-            int partyId = Integer.parseInt(publicIdsAndProposersAndParty.get(i)[3]);
-
-            boolean partyExists = false;
-            for (Map<String, Object> partyMap : proposerPartyCountList) {
-                if (partyMap.get("name").equals(partyName)) {
-                    partyMap.put("count", (int) partyMap.get("count") + 1);
-                    partyExists = true;
-                    break;
-                }
-            }
-            if (!partyExists) {
-                Map<String, Object> newPartyMap = new ConcurrentHashMap<>();
-                newPartyMap.put("name", partyName);
-                newPartyMap.put("count", 1);
-                proposerPartyCountList.add(newPartyMap);
-                Map<String, Object> newPartyIdMap = new ConcurrentHashMap<>();
-                newPartyIdMap.put("name", partyName);
-                newPartyIdMap.put("party_id", partyId);
-                proposerPartyIdList.add(newPartyIdMap);
-            }
-
-        }
-
-
-        bill.setPublicProposerList(publicProposers);
-        bill.setPublicProposerIdList(publicProposerIds);
-        bill.setProposerPartyCountList(proposerPartyCountList);
-        bill.setProposerPartyIdList(proposerPartyIdList);
-
-        return bill;
-    }
-
-
-    public List<BillDto> setPartyInBillDto(List<BillDto> bills) {
-        var billIds = bills.stream()
-                .map(BillDto::getBillId)
-                .collect(Collectors.toList());
-        var partyList = billProposerRepository.findPartyByBills(billIds);
-
-        Map<String, List<Long>> partyIdMap = partyList.stream()
-                .collect(Collectors.groupingBy(row -> (String) row[0],
-                        Collectors.mapping(row -> (Long) row[1], Collectors.toList())));
-        Map<String, List<String>> partyNameMap =
-                partyList.stream()
-                        .collect(Collectors.groupingBy(row -> (String) row[0],
-                                Collectors.mapping(row -> (String) row[2], Collectors.toList())));
-        Map<String, List<String>> partyImgMap =
-                partyList.stream()
-                        .collect(Collectors.groupingBy(row -> (String) row[0],
-                                Collectors.mapping(row -> (String) row[3], Collectors.toList())));
-        bills.stream().forEach(billDto -> {
-            String billId = billDto.getBillId();
-            List<Long> partyIdList = sortByFrequency(partyIdMap.getOrDefault(billId, Collections.emptyList()));
-            List<String> partyNameList = sortByFrequency(partyNameMap.getOrDefault(billId, Collections.emptyList()));
-            List<String> partyImgUrls = sortByFrequency(partyImgMap.getOrDefault(billId, Collections.emptyList()));
-            billDto.setPartyIdList(partyIdList);
-            billDto.setPartyList(partyNameList);
-            billDto.setPartyImageUrls(partyImgUrls);});
-
-        return bills;
-    }
-
-
-    // TODO: 수정 필요
-    // 리스트 중복제거 정렬 함수
-    private static <T> List<T> sortByFrequency(List<T> list) {
-        return list.stream()
-                .distinct()
-                .sorted((a, b) -> {
-                    int countA = (int) list.stream().filter(e -> e.equals(a)).count();
-                    int countB = (int) list.stream().filter(e -> e.equals(b)).count();
-                    return Integer.compare(countB, countA);
-                })
-                .collect(Collectors.toList());
-    }
-
-    public List<CongressmanBillDto> getBillInfoFromRepresentativeProposer(String congressmanId, Pageable pageable) {
-        var billIdList = billRepository.findByRepresentativeProposer(congressmanId, pageable)
-                .stream()
+        var billSlice = billRepository.findDefaultBillsByPage(pageable);
+        var billIdList = billSlice.stream()
                 .map(Bill::getId)
-                .collect(Collectors.toList());
+                .toList();
+        var billList = billRepository.findBillInfoByIdList(billIdList);
+        var billInfoList = billList.stream()
+                .map(bill -> getBillInfoFromBill(bill))
+                .toList();
+        var pagination = PaginationResponse.fromSlice(billSlice);
 
-        if (billIdList.isEmpty()) {
+        return billInfoList;
+
+    }
+
+    public List<BillDto> getBillsByStage(Pageable pageable, String stage) {
+        var billSlice = billRepository.findDefaultBillsByStage(pageable, stage);
+        var billIdList = billSlice.stream()
+                .map(Bill::getId)
+                .toList();
+        var billList = billRepository.findBillInfoByIdList(billIdList);
+        var billInfoList = billList.stream()
+                .map(bill -> getBillInfoFromBill(bill))
+                .toList();
+        var pagination = PaginationResponse.fromSlice(billSlice);
+
+        return billInfoList;
+    }
+
+    public BillDto getBillWithDetail(String billId) {
+        var bill = billRepository.findBillInfoById(billId)
+                .orElseThrow(() -> new CustomException(ResponseCode.INTERNAL_SERVER_ERROR));
+        var billDto = getBillInfoFromBill(bill);
+
+        return billDto;
+    }
+
+
+
+    public List<BillDto> getBillInfoFromRepresentativeProposer(String congressmanId, Pageable pageable) {
+        var billSlice = billRepository.findByRepresentativeProposer(congressmanId, pageable);
+
+        if (!billSlice.hasContent()) {
             throw new CustomException(ResponseCode.INTERNAL_SERVER_ERROR);
         }
+
+        var pagination = PaginationResponse.fromSlice(billSlice);
+
+        var billIdList = billSlice
+                .stream()
+                .map(Bill::getId)
+                .toList();
 
         var billList = billRepository.findBillInfoByIdList(billIdList);
 
         return billList.stream()
                 .map(bill -> getBillInfoFromBill(bill))
-                .collect(Collectors.toList());
+                .toList();
     }
 
-    public List<CongressmanBillDto> getBillInfoFromPublicProposer(String congressmanId, Pageable pageable) {
+    public List<BillDto> getBillInfoFromPublicProposer(String congressmanId, Pageable pageable) {
         var billIdList = billRepository.findBillByPublicProposer(congressmanId, pageable)
                 .stream()
                 .map(Bill::getId)
@@ -178,27 +106,27 @@ public class BillService {
 
         return billList.stream()
                 .map(bill -> getBillInfoFromBill(bill))
-                .collect(Collectors.toList());
+                .toList();
     }
 
 
-    private CongressmanBillDto getBillInfoFromBill(Bill bill) {
+    private BillDto getBillInfoFromBill(Bill bill) {
         var billInfoDto = BillInfoDto.fromBill(bill);
         var representativeProposer = bill.getRepresentativeProposer();
         var publicProposers = bill.getPublicProposer();
 
         var publicProposerDtoList = publicProposers.stream()
                 .map(PublicProposerDto::fromPublicProposer)
-                .collect(Collectors.toList());
+                .toList();
         var representativeProposerDto = RepresentativeProposerDto.fromRepresentativeProposer(representativeProposer);
 
-
-        return CongressmanBillDto.builder()
+        return BillDto.builder()
                 .billInfoDto(billInfoDto)
                 .representativeProposerDto(representativeProposerDto)
                 .publicProposerDtoList(publicProposerDtoList)
                 .build();
     }
+
 
 
 }
